--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Index Page</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat sit neque adipisci ipsum earum, sunt tempora eos accusamus, nobis eaque qui velit ipsa vel libero ipsam nostrum nesciunt porro quos.</p>
 </body>
 </html>
