--- a/public/documentation.html
+++ b/public/documentation.html
@@ -7,7 +7,63 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Document</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque ducimus ipsum in doloribus neque consequatur tempora voluptatum alias ea impedit ipsam quae tempore distinctio quia cum ad, reiciendis vero sunt?</p>
+    <h1>URL endpoints</h1>
+    <table>
+        <thead>
+            <tr>
+                <td>Request</td>
+                <td>URL</td>
+                <td>HTTP Method</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Return a list of ALL movies</td>
+                <td>/movies</td>
+                <td>GET</td>
+            </tr>
+            <tr>
+                <td>Return data of a single movie by title</td>
+                <td>/movies/:movietitle</td>
+                <td>GET</td>
+            </tr>
+            <tr>
+                <td>Return data about a genre by title</td>
+                <td>movies/genre/:genrename</td>
+                <td>GET</td>
+            </tr>
+            <tr>
+                <td>Return data about a director</td>
+                <td>movies/directors/:directorname</td>
+                <td>GET</td>
+            </tr>
+            <tr>
+                <td>Add new users</td>
+                <td>/users</td>
+                <td>POST</td>
+            </tr>
+            <tr>
+                <td>Update user's info</td>
+                <td>/users/:userid</td>
+                <td>PUT</td>
+            </tr>
+            <tr>
+                <td>Add a movie to favorite list </td>
+                <td>/users/:userid/:movietitle</td>
+                <td>PUT</td>
+            </tr>
+            <tr>
+                <td>remove a movie from favorite list</td>
+                <td>/users/:userid/:movietitle</td>
+                <td>DELETE</td>
+            </tr>
+            <tr>
+                <td>Remove existing user</td>
+                <td>/users/:userid</td>
+                <td>DELETE</td>
+            </tr>
+        </tbody>
+    </table>
+
 </body>
 </html>
