--- a/public/documentation.html
+++ b/public/documentation.html
@@ -24,17 +24,17 @@
             </tr>
             <tr>
                 <td>Return data of a single movie by title</td>
-                <td>/movies/:movietitle</td>
+                <td>/movies/:title</td>
                 <td>GET</td>
             </tr>
             <tr>
                 <td>Return data about a genre by title</td>
-                <td>movies/genre/:genrename</td>
+                <td>/movies/genre/:genreName</td>
                 <td>GET</td>
             </tr>
             <tr>
                 <td>Return data about a director</td>
-                <td>movies/directors/:directorname</td>
+                <td>/movies/director/:directorName</td>
                 <td>GET</td>
             </tr>
             <tr>
@@ -44,22 +44,22 @@
             </tr>
             <tr>
                 <td>Update user's info</td>
-                <td>/users/:userid</td>
+                <td>/users/:id</td>
                 <td>PUT</td>
             </tr>
             <tr>
                 <td>Add a movie to favorite list </td>
-                <td>/users/:userid/:movietitle</td>
+                <td>/users/:id/:favoriteMovie</td>
                 <td>PUT</td>
             </tr>
             <tr>
                 <td>remove a movie from favorite list</td>
-                <td>/users/:userid/:movietitle</td>
+                <td>/users/:id/:favoriteMovie</td>
                 <td>DELETE</td>
             </tr>
             <tr>
                 <td>Remove existing user</td>
-                <td>/users/:userid</td>
+                <td>/users/:id</td>
                 <td>DELETE</td>
             </tr>
         </tbody>
